# music_classifier

./: .gitignore  CMakeLists.txt  FindFFTW.cmake  FindGSL.cmake  audiorecord.cpp  audiorecord.h  audiorecordtransforms.cpp  audiorecordtransforms.h  bad code  exp  extra_code.cpp  main.cpp  out.txt  process.pl  process_2.pl  spectrogram.R  spectrogram3D.R  spectrogram3D2.R  svm_predictions  tools.cpp  tools.h
Perlscripts/: process.pl  process_2.pl
Rscripts/: plot_pitch.R  simple_plot.R  spectrogram2.R
audioDescriptors/: audiodescriptorcollectorfactory.cpp  audiodescriptorcollectorfactory.h  audiodescriptorextractor.cpp  audiodescriptorextractor.h  audiodescriptorfactory.cpp  audiodescriptorfactory.h  audiodescriptors.cpp  audiodescriptors.h  audiorecorddescriptors.cpp  audiorecorddescriptors.h  audiorhythmdescriptors.cpp  audiorhythmdescriptors.h  audiospectrumdescriptors.cpp  audiospectrumdescriptors.h  audiotonalitydescriptors.cpp  audiotonalitydescriptors.h  noveltyfunctions.cpp  noveltyfunctions.h
audioExceptions/: audioexceptions.cpp
audioFeatures/: audiofeature.cpp  audiofeature.h
audioLoaders/: audioloader.cpp  audioloader.h  audioloaderexceptions.cpp  audioloaderexceptions.h  waveaudioloader.cpp  waveaudioloader.h
audioSavers/: audiosaver.cpp  audiosaver.h  audiosavers.cpp  audiosavers.h
audioTransforms/: audiodwt.cpp  audiodwt.h  audiorecordtransforms.cpp  audiorecordtransforms.h  audiospectrumtransforms.cpp  audiospectrumtransforms.h  audiowavelettransforms.cpp  audiowavelettransforms.h  audiowfft.cpp  audiowfft.h
basicClasses/: audioampspectrum.cpp  audioampspectrum.h  audiodata.cpp  audiodata.h  audiofeatureexcerpt.cpp  audiofeatureexcerpt.h  audiorecord.cpp  audiorecord.h  audiospectrum.cpp  audiospectrum.h  audiowaveletimage.cpp  audiowaveletimage.h
classificationLibraries/: basicclassifier.cpp  basicclassifier.h  boostclassifier.cpp  boostclassifier.h  committeeclassifier.cpp  committeeclassifier.h  svmclassifier.cpp  svmclassifier.h
data/: .RData  .Rhistory
fastFourierTransform/: fft.cpp  fft.h  wfft.cpp  wfft.h  windowfunctions.cpp  windowfunctions.h
featureExtractionLibraries/audioDescriptors/: audiodescriptorextractor.cpp  audiodescriptorextractor.h  audiodescriptorfactory.cpp  audiodescriptorfactory.h  audioextradescriptors.cpp  audioextradescriptors.h  audiofeaturesamplesextractor.cpp  audiofeaturesamplesextractor.h  audiorecorddescriptors.cpp  audiorecorddescriptors.h  audiorhythmdescriptors.cpp  audiorhythmdescriptors.h  audiospectrumdescriptors.cpp  audiospectrumdescriptors.h  audiotonalitydescriptors.cpp  audiotonalitydescriptors.h
featureExtractionLibraries/audioTransforms/: audiodwt.cpp  audiodwt.h  audiorecordtransforms.cpp  audiorecordtransforms.h  audiospectrumtransforms.cpp  audiospectrumtransforms.h  audiowfft.cpp  audiowfft.h
featureExtractionLibraries/fastFourierTransform/: complex.h  fft.cpp  fft.h  wfft.h
featureExtractionLibraries/specialFunctions/: correlationfunctions.h  noveltyfunctions.cpp  noveltyfunctions.h  windowfunctions.cpp
featureExtractionLibraries/waveletTransform/: dwt.cpp  dwt.h
genreClassificationSystem/: genreclassificationsystem.cpp  genreclassificationsystem.h  genreclassificator.cpp  genreclassificator.h
genre_classifiers/: blues  classical  country  disco  hiphop  jazz  metal  pop  reggae  rock
images/: beat60.eps  beat90.eps  centroid.eps  energy.eps  mean.eps  mfcc.eps  spcentroid.eps  sprflat.eps  sprflux.eps  sproll.eps  variance.eps  zcr.eps
specialFunctions/: correlationfunctions.cpp  correlationfunctions.h  noveltyfunctions.cpp  noveltyfunctions.h
tools/: tools.cpp  tools.h
waveletTransform/: dwt.cpp  dwt.h
